Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,42 +1,37 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Pytr : " />
 
-  <title>Pytr</title>
-  <meta name="description" content="">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Pytr</title>
+  </head>
 
-</head>
+  <body>
 
-<body>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/DarkArtek/Pytr">View on GitHub</a>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Pytr</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/DarkArtek/Pytr/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/DarkArtek/Pytr/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/DarkArtek/Pytr" class="code">View Pytr on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h2>
+          <h1 id="project_title">Pytr</h1>
+          <h2 id="project_tagline"></h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/DarkArtek/Pytr/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/DarkArtek/Pytr/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h2>
 <a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>About</h2>
 
 <p>PytR is a  Tracker written in Python using non-blocking Tornado Web Server. It also features a nice and clean UI for showing Tracker statistics.</p>
@@ -50,13 +45,13 @@
 </code></pre>
 
 <h2>
-<a name="setting-up-a-virtual-enviroment" class="anchor" href="#setting-up-a-virtual-enviroment"><span class="octicon octicon-link"></span></a>Setting up a virtual enviroment</h2>
+<a name="setting-up-a-virtual-environment" class="anchor" href="#setting-up-a-virtual-environment"><span class="octicon octicon-link"></span></a>Setting up a virtual environment</h2>
 
 <pre><code>virtualenv virtual
 </code></pre>
 
 <h2>
-<a name="activate-the-virtual-enviroment" class="anchor" href="#activate-the-virtual-enviroment"><span class="octicon octicon-link"></span></a>Activate the virtual enviroment</h2>
+<a name="activate-the-virtual-environment" class="anchor" href="#activate-the-virtual-environment"><span class="octicon octicon-link"></span></a>Activate the virtual environment</h2>
 
 <pre><code>source virtual/bin/activate
 </code></pre>
@@ -116,26 +111,18 @@
 <a name="note" class="anchor" href="#note"><span class="octicon octicon-link"></span></a>Note</h2>
 
 <p>if you are inside a virtualenviroment, the sudo command is not necessary.</p>
-        </article>
-      </div>
+      </section>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/DarkArtek" class="avatar"><img src="https://avatars1.githubusercontent.com/u/1131773?s=60" width="48" height="48"/></a> <a href="https://github.com/DarkArtek">DarkArtek</a> maintains <a href="https://github.com/DarkArtek/Pytr">Pytr</a></p>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Pytr maintained by <a href="https://github.com/DarkArtek">DarkArtek</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
 
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/DarkArtek/Pytr/tarball/master" class="tar">tar</a><a href="https://github.com/DarkArtek/Pytr/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
+    
 
-  
-</body>
+  </body>
 </html>
