--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <h2>
 <a name="note" class="anchor" href="#note"><span class="octicon octicon-link"></span></a>Note</h2>
 
-<p>if you are inside a virtualenviroment, the sudo command is not necessary.</p>
+<p>if you are inside a virtualenvironment, the sudo command is not necessary.</p>
       </section>
     </div>
 
